grid spacing fix

--- a/src/assets/css/components/grid.css
+++ b/src/assets/css/components/grid.css
@@ -1,12 +1,14 @@
 .Grid {
   display: grid;
   grid-gap: var(--global-spacing);
+  margin-bottom: var(--global-spacing);
 }
 
 @media (--lg-viewport) {
   .Grid {
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     grid-gap: var(--global-spacing-sm);
+    margin-bottom: var(--global-spacing-sm);
   }
 }
 
