--- a/src/assets/css/components/type.css
+++ b/src/assets/css/components/type.css
@@ -26,7 +26,6 @@
 
 .Type--lg {
   font-size: var(--text-size-lg);
-  margin-bottom: var(--Type-spacing-lg);
 }
 
 
